--- a/src/components/Integration/MappingsResult/mappingsResult.module.css
+++ b/src/components/Integration/MappingsResult/mappingsResult.module.css
@@ -5,7 +5,7 @@
   min-width: 200px;
   display: flex;
   flex-direction: column;
-  background-color: #f4f4f4;
+  background-color: var(--background-color-3);
   padding: 5px;
   border-radius: 8px;
   height: 90vh;
