--- a/src/variables.css
+++ b/src/variables.css
@@ -65,7 +65,7 @@
   --tooltray-background-color-light: #333;
   --tooltray-background-color-light-transparent: rgba(51, 51, 51, 0.5);
 
-  --file-selected-bg-light: #dceeff;
+  --file-selected-bg-light: rgba(223, 240, 255, 0.75); /* Light blue */
   --file-selected-border-light: var(--button-color-hover-light);
 
   --darkened-background-color: rgba(0, 0, 0, 0.5);
@@ -180,7 +180,7 @@
   --tooltray-background-color-dark: #1a1a1a;
   --tooltray-background-color-dark-transparent: rgba(26, 26, 26, 0.5);
 
-  --file-selected-bg-dark: #1a3a4a;
+  --file-selected-bg-dark: rgba(70, 130, 180, 0.25); /* Steel blue, less bright */
   --file-selected-border-dark: #11505f;
 
   --darkened-background-color-dark: rgba(0, 0, 0, 0.7);
